Fix alignment bug in Firefox

--- a/app/assets/stylesheets/modules/_search.scss
+++ b/app/assets/stylesheets/modules/_search.scss
@@ -34,7 +34,7 @@
   @include placeholder {
     color: $green;
   }
-  display: block;
+  display: inline-block;
   padding: 0 50px 0 0;
   border: none;
   background: transparent;
